cmake_minimum_required(VERSION 3.8)
project(1)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES "chapter two homework/2.cpp" "chapter two homework/3.cpp" "chapter two homework/4.cpp" "chapter two homework/5.cpp" "chapter two homework/6.cpp" "chapter two homework/7.cpp" "chapter two homework/8.cpp" "chapter two homework/9.cpp" "chapter two homework/1.cpp" "chapter two homework/10.cpp" "chapter two homework/11.cpp" "chapter two homework/12.cpp" "chapter two homework/13.cpp" "chapter two homework/14.cpp" "chapter two homework/15.cpp" "chapter two homework/16.cpp" "chapter two homework/17.cpp" "chapter two homework/18.cpp" "chapter two homework/19.cpp" "chapter two homework/20.cpp" "chapter two homework/21.cpp" "chapter three homework/1.cpp" "chapter three homework/my_queue.h" "chapter three homework/my_stack.h")
add_executable(1 ${SOURCE_FILES} "chapter two homework/3.cpp" "chapter two homework/4.cpp" "chapter two homework/5.cpp" "chapter two homework/6.cpp" "chapter two homework/8.cpp" "chapter two homework/9.cpp" "chapter two homework/1.cpp" "chapter two homework/10.cpp" "chapter two homework/11.cpp" "chapter two homework/13.cpp" "chapter two homework/14.cpp" "chapter two homework/15.cpp" "chapter two homework/16.cpp" "chapter two homework/17.cpp" "chapter two homework/18.cpp" "chapter two homework/19.cpp" "chapter two homework/20.cpp" "chapter two homework/21.cpp" "chapter three homework/1.cpp" "chapter three homework/my_queue.h" "chapter three homework/my_stack.h")